--- a/_posts/2021-04-03-bitsors.md
+++ b/_posts/2021-04-03-bitsors.md
@@ -14,7 +14,7 @@ You can find more information about this release [here](https://github.com/artur
 
 Here's an example of how one would use it:
 
-```Rust
+```rust
 extern crate bitsors;
 
 use bitsors::auth::BitsoCredentials;
