Fix links to bitsors docs

--- a/_posts/2021-02-12-bitsors.md
+++ b/_posts/2021-02-12-bitsors.md
@@ -12,6 +12,6 @@ I managed to get a fair support for both the public and the private API, but lef
 
 Hopefully, we will manage to add support for WebSockets soon!
 
-You can find the repository [here](https://github.com/arturomf94/bitsors), the crate [here](https://crates.io/crates/bitsors) and the docs [here](https://docs.rs/crate/bitsors).
+You can find the repository [here](https://github.com/arturomf94/bitsors), the crate [here](https://crates.io/crates/bitsors) and the docs [here](https://docs.rs/bitsors).
 
 🍀
