--- a/_posts/2021-04-03-bitsors.md
+++ b/_posts/2021-04-03-bitsors.md
@@ -39,6 +39,6 @@ async fn main() {
 }
 ```
 
-You can find the repository [here](https://github.com/arturomf94/bitsors), the crate [here](https://crates.io/crates/bitsors) and the docs [here](https://docs.rs/crate/bitsors).
+You can find the repository [here](https://github.com/arturomf94/bitsors), the crate [here](https://crates.io/crates/bitsors) and the docs [here](https://docs.rs/bitsors).
 
 🍀
