--- a/_posts/2021-05-26-awa.md
+++ b/_posts/2021-05-26-awa.md
@@ -23,8 +23,6 @@ categories: [RaspberryPi, Watering Systems]
 
 ---
 
-# An automated watering assembly
-
 **Description**: Around October 2020, my good friend Fredo ([@sci_sic](https://twitter.com/sci_sic)) visited me at Xalapa and we decided (for fun) to start building an automated watering system for 🌱s. Neither of us had (at least up until that point) any real experience with hardware, so apart from the conventional Raspberry Pi set-up, we were delving into _terra nova_. This was, of course, a great feat for a mid-pandemic activity and I think I speak for both of us when I say that it was a very fruitful learning and it was good to spend some time together starting this project off. Unfortunately, due to our lack of experience (and Fredo's relatively short stay) we did not manage to finish this project in time before he parted. Luckily for our 🌱s we were both determined on reaching our goal, and even though we opted for slightly different paths, I think we both ended up with something quite interesting. I will try to outline, as succintly as possible, some of the obstacles and learnings we encountered along the way. However, at least regarding the last part of this project, I can only speak for myself... Perhaps Fredo will like to share ther rest of his experience with everyone too some day!
 
 ### Initial planning
@@ -58,7 +56,6 @@ After diving into a few of those articles we had a brief list of tools we needed
 
 By all means, I think this module is actually really helpful. Initially, what we wanted to do was something like this:
 
-```
 ┌───────┐
 │ Dht11 │
 └───────┘                         ┌─────┐
@@ -76,17 +73,16 @@ By all means, I think this module is actually really helpful. Initially, what we
                                ┌────────────┐
                                │ Pump & Tank│
                                └────────────┘
-```
 
 Or to see it in a more visually-friendly way:
 
-![image-20201017125537062](../images/image-20201017125537062.png)
+![image-20201017125537062](https://raw.githubusercontent.com/arturomf94/arturomf94.github.io/master/images/image-20201017125537062.png)
 
 This was an ideal architecture because, as I said, we wanted to have the RPi on a separate place and control the relay via WiFi. However, configuring the module and making sure it worked was harder than we thought, especially given that we wanted to power it with solar... At first we used the ESP8266 ES-01 model, which we were not able to successfully put together because we were missing a USB adapter, but at this point we were really anxious to get this going so we bought a [ESP8266 Lua WiFi with CP2102](https://www.amazon.com/ESP8266-microcontroller-NodeMCU-WiFi-CP2102/dp/B071WRD25D) (v1.0) at a local store and we actually did manage to use that without the solar!
 
 It was a lot easier to upload the code there, and we even managed to set an HTTP endpoint to control the relay: 
 
-![image-20201021192448708](../images/image-20201021192448708.png)
+![image-20201021192448708](https://raw.githubusercontent.com/arturomf94/arturomf94.github.io/master/images/image-20201021192448708.png)
 
 However, at this point the set-up of that module was becoming a bit obtuse and I decided to leave it out, meaning that the RPi would have to be relatively close to the relay and the rest of the system in order for it to work. That is, the would be no remote control through WiFi, although I must admit this is a really cool thing to have both in terms of keeping the RPi safe and isolated from the rest of the system and in terms of reach.
 
@@ -98,7 +94,6 @@ In any case, what this meant was that instead of having a water-pump we would us
 
 The final architecture would, thus, look like this:
 
-```
 ┌───────┐
 │ Dht11 │              ┌───────┐
 └───────┘              │12V    │
@@ -116,7 +111,6 @@ The final architecture would, thus, look like this:
                     ┌────────────┐
                     │Valve & Tank│
                     └────────────┘
-```
 
 
 In terms of resources this meant that we also needed the following: 
@@ -134,13 +128,13 @@ At this point it was just a matter of wiring things up. For that a really cool r
 
 This was a very simple set-up. Depending on the type of DHT11 the pinout of sensor could be different, but what's important is that in terms of the connection with the RPi, one needs to have the VCC connected to the 3V3 pin, ground to ground and the signal to one of the GPIO pins.
 
-#### RPi to eelay and solenoid valve
+#### RPi to relay and solenoid valve
 
 Connecting the RPi to the relay was a bit more complicated. The thing about it is that the solenoid valve is that it needs a 12V power source and if one wants to isolate the RPi from that voltage level one should use a set of relays [this](https://articulo.mercadolibre.com.mx/MLM-613855082-modulo-de-4-relevadores-relay-pic-arduino-_JM). Connecting those relays to the RPi is almost the same as connecting the DHT11, except for the fact that the VCC goes to the 5V pin.
 
 Once we had that sorted out we needed to strip some wires to connect the solenoid valve to the set of relays and the 12V power source. All in all, this is what it looked like (without the water tank):
 
-![](../images/signal-2021-03-07-235850.jpeg)
+![](https://raw.githubusercontent.com/arturomf94/arturomf94.github.io/master/images/signal-2021-03-07-235850.jpeg)
 
 #### The code
 
