--- a/_posts/2021-05-25-bitsors.md
+++ b/_posts/2021-05-25-bitsors.md
@@ -10,7 +10,7 @@ I am very proud to announce that `bitso-rs` is now an official API client in Bit
 
 You can find the official repository [here](https://github.com/bitsoex/bitso-rs/).
 
-_Note: my prebious, [personal repository](https://github.com/arturomf94/bitsors) has now been archived but the usage of the crate will remain the same._
+_Note: my previous, [personal repository](https://github.com/arturomf94/bitsors) has now been archived but the usage of the crate will remain the same._
 
 
 🍀
