--- a/_posts/2021-05-26-awa.md
+++ b/_posts/2021-05-26-awa.md
@@ -2,8 +2,8 @@
 layout: post
 title: "awa - an automated watering system"
 author: Arturo Márquez Flores
-tags: [RaspberryPi, Personal]
-categories: [RaspberryPi, Watering Systems]
+tags: [RaspberryPi, Personal, Rust]
+categories: [RaspberryPi, Watering Systems, Rust]
 ---
 
 ---
@@ -56,6 +56,7 @@ After diving into a few of those articles we had a brief list of tools we needed
 
 By all means, I think this module is actually really helpful. Initially, what we wanted to do was something like this:
 
+```
 ┌───────┐
 │ Dht11 │
 └───────┘                         ┌─────┐
@@ -73,6 +74,7 @@ By all means, I think this module is actually really helpful. Initially, what we
                                ┌────────────┐
                                │ Pump & Tank│
                                └────────────┘
+```
 
 Or to see it in a more visually-friendly way:
 
@@ -94,6 +96,7 @@ In any case, what this meant was that instead of having a water-pump we would us
 
 The final architecture would, thus, look like this:
 
+```
 ┌───────┐
 │ Dht11 │              ┌───────┐
 └───────┘              │12V    │
@@ -111,6 +114,7 @@ The final architecture would, thus, look like this:
                     ┌────────────┐
                     │Valve & Tank│
                     └────────────┘
+```
 
 
 In terms of resources this meant that we also needed the following: 
