--- a/_posts/2021-05-26-awa.md
+++ b/_posts/2021-05-26-awa.md
@@ -27,7 +27,7 @@ categories: [RaspberryPi, Watering Systems, Rust]
 
 ### Initial planning
 
-I think one of the hardest bits of this project was to get resources for what we had in mind. :thinking: Actually! (Now that I think of it) I think **the** hardest bit was to decide **what** we had in mind; that is, **what** we actually wanted to achieve [^1].
+I think one of the hardest bits of this project was to get resources for what we had in mind. 🤔 Actually! (Now that I think of it) I think **the** hardest bit was to decide **what** we had in mind; that is, **what** we actually wanted to achieve [^1].
 
 In short I'd say that we were striving for a very simple sytem/architecture that would allow us to water at least one plant, given some inputs from the environment.
 
