Add `usemathjax` flag

--- a/_posts/2021-05-26-awa.md
+++ b/_posts/2021-05-26-awa.md
@@ -4,6 +4,7 @@ title: "awa - an automated watering system"
 author: Arturo Márquez Flores
 tags: [RaspberryPi, Personal, Rust]
 categories: [RaspberryPi, Watering Systems, Rust]
+usemathjax: true
 ---
 
 ---
