--- a/_posts/2069-01-01-table.md
+++ b/_posts/2069-01-01-table.md
@@ -8,26 +8,30 @@ categories: [Other, Woodwork]
 
 ---
 ```
-    _                     _
-  _|_|___________________|_|_
- |__:_____________________:__|
- |___________________________|
- |__:_____________________:__|
- |___________________________|
-   |_|___________________|_|
-  /__.___________________.__\
- /__._____________________.__\
-/_____________________________\
-   | |_|               |_| |
-   | |                   | |
-   | |                   | |
-   |_|                   |_|
+        ______________________________
+       /______________________________\
+      /________________________________\
+      [________________________________]
+         \ \  / /            \ \  / /
+          \ \/ /              \ \/ /
+          _\/ /________________\ \/_
+         [_/o/__________________\o\_]
+          / /\ \              / /\ \
+         /_/  \_\            /_/  \_\
 ```
 ---
 
 ### DIY Pub Beer-Garden Table
 
+List of things I still need to buy:
 
+* 1 box of deck-scews - 3-1/2" long (maybe even 4" long). This
+  should have at least more than 50 screws.
+* 1 box of deck-screws - 2" long. This should have at least
+  more than 50 screws.
+* 12: 3/8" x 2" lag bolts with washers and nuts for the table
+  cleats.
+* 6: 3/8" x 2-1/2" lag scews with washers.
 
 🍀
 
