--- a/_posts/2021-04-03-bitsors.md
+++ b/_posts/2021-04-03-bitsors.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "bitsors release!"
+title: "BITSORS RELEASE"
 author: Arturo Márquez Flores
 tags: [Rust, Bitso]
 categories: [Rust]
