--- a/_posts/2021-05-25-bitsors.md
+++ b/_posts/2021-05-25-bitsors.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "bitsors - official repository"
+title: "BITSORS REPO"
 author: Arturo Márquez Flores
 tags: [Rust, Bitso]
 categories: [Rust]
