--- a/_posts/2025-05-27-grpo.md
+++ b/_posts/2025-05-27-grpo.md
@@ -42,7 +42,9 @@ And in TRL there's an [open PR](https://github.com/huggingface/trl/pull/3072) to
 
 Even though in a twitter poll posted by him, VLM support came out on top as a desired feature:
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">What should be our next main priority for TRL?</p>&mdash; Quentin Gallouédec (@QGallouedec) <a href="https://twitter.com/QGallouedec/status/1919806234821026141?ref_src=twsrc%5Etfw">May 6, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div style="display: flex; justify-content: center;">
+  <blockquote class="twitter-tweet"><p lang="en" dir="ltr">What should be our next main priority for TRL?</p>&mdash; Quentin Gallouédec (@QGallouedec) <a href="https://twitter.com/QGallouedec/status/1919806234821026141?ref_src=twsrc%5Etfw">May 6, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
 
 Now, I know open source projects are hard to maintain, and, really, I have nothing but admiration and respect for what folks at HF do, specifically for Quentin for working on TRL; I think they're doing a great service to the community and a lot of people, including myself, use their tools almost every day. However, I do think that framework developers tend to have an incentive to be crowd-pleasers and to be all-encompassing on features. In the specific context of RL for LLMs, which is rapidly changing, this can be very challenging.
 
