--- a/_posts/2025-05-27-grpo.md
+++ b/_posts/2025-05-27-grpo.md
@@ -102,7 +102,7 @@ To keep our model close to a reference, we calculate the KL divergence between o
 
 $$ \mathbb{D}_{\text{KL}}\left[\pi_\theta \|\pi_{\text{ref}}\right] = \frac{\pi_{\text{ref}}(o_{i,t} \mid q, o_{i,<t})}{\pi_\theta(o_{i,t} \mid q, o_{i,<t})} - \log \frac{\pi_{\text{ref}}(o_{i,t} \mid q, o_{i,<t})}{\pi_\theta(o_{i,t} \mid q, o_{i,<t})} - 1 $$
 
-where $$ \pi_{\theta}(o_t|q,o_{<t}) $$, called the policy, is the conditional probability distribution over the possible completions, given a prompt/question and the previous completions, parametrized by the model weights. This is just RL-notation for the notion of the token probabilities provided by the LLM.
+where $$ \pi_{\theta}(o_t \mid q,o_{<t}) $$, called the policy, is the conditional probability distribution over the possible completions, given a prompt/question and the previous completions, parametrized by the model weights. This is just RL-notation for the notion of the token probabilities provided by the LLM.
 
 #### Loss
 
@@ -539,7 +539,9 @@ As a final note I would just like to write down some pending things for this imp
 
 ### Conclusion
 
-The main training script has ~600 LoC, around 40% of the `grpo_trainer.py` module in TRL. This is **not at all** a replacement for TRL+accelerate+deepspeed, but, rather, an exercise that hopefully shows, firstly, that it is definitely possible to run GRPO in a scalable way w/o accelerate and deepspeed by just leveraging pytorch's API, and secondly, that it's easier to add features (like VLM support) when doing things like this. Two good take-aways, I'd say, and hopefully they won't be the last ones :)
+The main training script has ~600 LoC, around 40% of the `grpo_trainer.py` module in TRL. This is **not at all** a replacement for TRL+accelerate+deepspeed, but, rather, an exercise that hopefully shows, firstly, that it is definitely possible to run GRPO in a scalable way w/o accelerate and deepspeed by just leveraging pytorch's API, and, secondly, that it's easier to add features (like VLM support) when doing things like this. Two good take-aways, I'd say, and hopefully they won't be the last ones :)
+
+Oh, the full code is [here](https://github.com/nph4rd/grpo)!
 
 🍀
 
