--- a/_posts/2025-05-27-grpo.md
+++ b/_posts/2025-05-27-grpo.md
@@ -12,7 +12,7 @@ usemathjax: true
 ↻ ◁ |⚙⌨⚙| ▷ ↺
 ```
 
-I have found that a lot (if not most) people are using TRL as their base for GRPO experiments and many have had problems with it one way or another, to the extent that I've seen comments like:
+I have found that a lot (if not most) of people are using TRL as their base for GRPO experiments and many have had problems with it one way or another, to the point where I've seen comments such as:
 
 <div style="text-align: center;">
   <img src="https://raw.githubusercontent.com/nph4rd/nph4rd.github.io/master/images/grpo_screenshot1.png" alt="" width="420">
@@ -46,7 +46,7 @@ Even though in a twitter poll posted by him, VLM support came out on top as a de
   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">What should be our next main priority for TRL?</p>&mdash; Quentin Gallouédec (@QGallouedec) <a href="https://twitter.com/QGallouedec/status/1919806234821026141?ref_src=twsrc%5Etfw">May 6, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </div>
 
-Now, I know open source projects are hard to maintain, and, really, I have nothing but admiration and respect for what folks at HF do, specifically for Quentin for working on TRL; I think they're doing a great service to the community and a lot of people, including myself, use their tools almost every day. However, I do think that framework developers tend to have an incentive to be crowd-pleasers and to be all-encompassing on features. In the specific context of RL for LLMs, which is rapidly changing, this can be very challenging.
+Now, I know open source projects are hard to maintain, and, really, I have nothing but admiration for the folks at HF, especially Quentin, who maintains TRL. They provide a great service to the community; many of us (myself included) use their tools daily. However, I do think that framework developers tend to have an incentive to be crowd-pleasers and to be all-encompassing on features. In the specific context of RL for LLMs, which is rapidly changing, this can be very challenging.
 
 So, we as a community end up in an uncomfortable situation where, if you want to run more contrived or interesting experiments, you end up in a trade-off between using something that works out-of-the-box with a set of features, but which might not be an exact fit for your needs or be hard to modify and so end up being limited by it, or a from-scratch implementation that could be a bit time-consuming but that could improve on the extensibility you need for your specific experiment idea.
 
@@ -60,7 +60,7 @@ Then I noticed the PR I linked above, and even went ahead and did some experimen
 
 So it looked like TRL wasn't ready.
 
-You might ask: why not other implementations? Well, there's [verl](https://github.com/volcengine/verl) for instance, or forks of [OpenRLHF](https://github.com/OpenRLHF/OpenRLHF) like [lmm-r1](https://github.com/TideDra/lmm-r1), but these two are also frameworks have their own fair degree of complexity and I did not find them to be any more extensible/hackable than TRL.
+You might ask: why not other implementations? Well, there's [verl](https://github.com/volcengine/verl) for instance, or forks of [OpenRLHF](https://github.com/OpenRLHF/OpenRLHF) like [lmm-r1](https://github.com/TideDra/lmm-r1), but these two are also frameworks that have their own fair degree of complexity and I did not find them to be any more extensible/hackable than TRL.
 
 Later on I think I saw this implementation: [nano-aha-moment](https://github.com/McGill-NLP/nano-aha-moment). I found it interesting because I noticed it was pretty self-contained and did not depend on other frameworks. However, it had two problems: it did not scale (it was designed to work on a single GPU) and it was written for LLMs without multimodal support.
 
@@ -75,7 +75,7 @@ Before moving on to the actual details on the implementation I will do a brief o
 
 ## GRPO
 
-It has now become clear that using RL on top of LLMs can enhance capabilities in certain domains. This is not a new concept, but OpenAI's o-series and DeepSeek's R1 model certainly has popularized its usage in verifiable domains, as an effective method to improve reasoning capabilities. The jury is still out regarding the most efficient way to use RL in this context and what percentage of the compute budget should be used on this, but if one thing's for certain, it's that these methods are worth tinkering with!
+It has now become clear that using RL on top of LLMs can enhance capabilities in certain domains. This is not a new concept, but OpenAI's o-series and DeepSeek's R1 model certainly has popularized its usage in verifiable domains, as an effective method to improve reasoning capabilities. Exactly how much RL to apply and how much compute it deserves remains an open question. What is clear is that RL-finetuning is well worth tinkering with.
 
 The most popular implementation of RL in this context is probably GRPO, which was introduced in [DeepSeekMath: Pushing the Limits of Mathematical Reasoning in Open Language Models](https://arxiv.org/abs/2402.03300).
 
@@ -247,7 +247,7 @@ The loading of the models is handled in the function `init_models`. There are tw
 
 ##### DDP
 
-In the baseline case we use [DDP](https://docs.pytorch.org/docs/stable/generated/torch.nn.parallel.DistributedDataParallel.html). We first load the model as we would usually do, using the `.from_pretrained` method in transformers. One difference here with TRL is that we use a [`smart_load` function in the utils](https://github.com/nph4rd/grpo/blob/1bb8b6831fb9aaabed93aad7994d85bfe4606b1b/utils.py#L43) which basically just handles the different ways in which you could load a model in transformers (e.g. Qwen2.5-VL is loaded differently than Qwen2.5). Then we wrap the model with DDP. That is, something as follows, roughly:
+In the baseline case we use [DDP](https://docs.pytorch.org/docs/stable/generated/torch.nn.parallel.DistributedDataParallel.html). We first load the model as we would usually do, using the `.from_pretrained` method in transformers. One difference here with TRL is that we use a [`smart_load` function in the utils](https://github.com/nph4rd/grpo/blob/1bb8b6831fb9aaabed93aad7994d85bfe4606b1b/utils.py#L43) which basically just handles the different ways in which you could load a model in transformers (e.g. Qwen2.5-VL is loaded differently than Qwen2.5). Then we wrap the model with DDP. That is, something as follows:
 
 ```python
 policy_model_unwrapped = smart_load(
@@ -263,7 +263,7 @@ policy_model = DDP(
 ```
 ##### PEFT
 
-If using PEFT, then we also load the model with `smart_load` but then we also use the `get_peft_model` function. Finally, we wrap this with either DDP or FSDP. Roughly:
+If using PEFT, then we also load the model with `smart_load` but then we also use the `get_peft_model` function. Finally, we wrap this with either DDP or FSDP:
 
 ```python
 policy_model_unwrapped = smart_load(
@@ -374,7 +374,7 @@ If using FSDP, then either with or without PEFT we call the function defined in 
 
 The difference here with TRL is that in TRL the parameters are[ gathered with a special deepspeed context manager](https://github.com/huggingface/trl/blob/d1174adc5b1f21b1932d8d9cf1622c379f193592/trl/trainer/grpo_trainer.py#L901). I'm not sure that this is particularly memory-efficient if the model is very big because in theory it would unshard all the params into at least one of the GPUs to be able to call `model.merge_adapter()`, though, admittedly, I haven't gone into the details. For my implementation I decided to iterate the modules, gathering and only then merge each one, instead of gathering all the params, then merging the adapter to the whole model[^6].
 
-Omitting some details, the code looks roughly like this:
+Omitting some details, the code looks ~ like this:
 
 ```python
 def sync_fsdp_params_to_vllm(
@@ -528,7 +528,7 @@ else:
 
 The idea is just that if we're using a multimodal model we should pass the images to the processor and then send them to the vLLM server! Simple as. There are a couple of minor changes because now the processor has a tokenizer attribute whereas in the text-only case we just used the processor directly, but, really, it's not much else.
 
-### To-do's
+### To-dos
 
 As a final note I would just like to write down some pending things for this implementation, some of which I had already thought about and others I noted while writing this 😂. I hope to come back soon enough to tackle them:
 
@@ -541,7 +541,7 @@ As a final note I would just like to write down some pending things for this imp
 
 The main training script has ~600 LoC, around 40% of the `grpo_trainer.py` module in TRL. This is **not at all** a replacement for TRL+accelerate+deepspeed, but, rather, an exercise that hopefully shows, firstly, that it is definitely possible to run GRPO in a scalable way w/o accelerate and deepspeed by just leveraging pytorch's API, and, secondly, that it's easier to add features (like VLM support) when doing things like this. Two good take-aways, I'd say, and hopefully they won't be the last ones :)
 
-Oh, the full code is [here](https://github.com/nph4rd/grpo)!
+The full code is [here](https://github.com/nph4rd/grpo).
 
 🍀
 
@@ -549,7 +549,7 @@ Oh, the full code is [here](https://github.com/nph4rd/grpo)!
 
 [^1]: Though this might change soon with the refactor work that Will is doing 🙌
 
-[^2]: I say currently because this might change in the future. It's likely that development/research will stabilize around specific methods/techniques. Who knows, but I find it intuitive that something like this will happen eventually.
+[^2]: I say currently because this might change in the future. It's likely that development/research will stabilize around specific methods/techniques. Who knows, but I suspect that something like this will happen eventually.
 
 [^3]:  I do wonder whether there's a way to use FSDP+PEFT more efficiently. You can't call merge/unmerge on the FSDP model, but perhaps it's possible to post-order traverse the modules and call merge on each module while the params are gathered. There's a similar trick when syncing the weights in the vLLM server, but I haven't explored this much. I hope to do so in the future.
 
