--- a/_posts/2025-05-27-grpo.md
+++ b/_posts/2025-05-27-grpo.md
@@ -412,7 +412,7 @@ def sync_fsdp_params_to_vllm(
 
 There aren't too many differences between the way in which TRL scores the completions and the way I do so in my implementation.
 
-One thing that is different is that I separated this logic into it's own function, called 
+One thing that is different is that I separated this logic into its own function, called 
 
 Also, in TRL implementation we have:
 
