--- a/_posts/2025-05-27-grpo.md
+++ b/_posts/2025-05-27-grpo.md
@@ -412,9 +412,9 @@ def sync_fsdp_params_to_vllm(
 
 There aren't too many differences between the way in which TRL scores the completions and the way I do so in my implementation.
 
-One thing that is different is that I separated this logic into its own function, called 
+One thing that is different is that I separated this logic into its own function, called [`score_completions`](https://github.com/nph4rd/grpo/blob/10549895f6529a23592038d246cdbf75b19af9b8/train.py#L41).
 
-Also, in TRL implementation we have:
+Also, in the TRL implementation we have:
 
 ```python
 rewards = (rewards_per_func * self.reward_weights.to(device).unsqueeze(0)).nansum(dim=1)
