--- a/_posts/2025-05-27-grpo.md
+++ b/_posts/2025-05-27-grpo.md
@@ -110,7 +110,6 @@ Now, we can compute the loss using the above, as follows:
 
 $$
 
-\begin{equation}
 \mathcal{J}(\theta)=
 \frac{1}{G}\sum_{i=1}^{G}\,
 \frac{1}{|o_i|}\sum_{t=1}^{|o_i|}
@@ -130,7 +129,6 @@ $$
 \;-\;
 \beta\,\mathbb{D}_{\mathrm{KL}}\!\bigl[\pi_{\theta}\,\|\,\pi_{\text{ref}}\bigr]
 \Bigg\}
-\end{equation}
 
 $$
 
@@ -147,7 +145,6 @@ In [DAPO: An Open-Source LLM Reinforcement Learning System at Scale](https://arx
 
 $$
 
-\begin{equation}
 \mathcal{J}(\theta)=
 \frac{1}{\sum_{i=1}^G |o_i|}
 \sum_{i=1}^{G}\,
@@ -168,7 +165,6 @@ $$
 \;-\;
 \beta\,\mathbb{D}_{\mathrm{KL}}\!\bigl[\pi_{\theta}\,\|\,\pi_{\text{ref}}\bigr]
 \Bigg\}
-\end{equation}
 
 $$
 
@@ -180,7 +176,7 @@ Other modifications are set as optional arguments in the TRL implementation. In 
 The full implementation can be found in my [grpo repo](https://github.com/nph4rd/grpo). There's instructions about how to use it in the README. Here, I will go over some important points that either overlap with TRL and are worth noting or differ from TRL's implementation. Here are some highlights:
 
 - To drop dependencies, I removed the reliance on accelerate and the deepspeed integration. Instead, I use [PyTorch's distributed features](https://docs.pytorch.org/tutorials/beginner/dist_overview.html).
-- My implementation only supports generation with [vLLM](https://docs.vllm.ai/en/stable/) as a separate process running in a server, unlike TRL which supports either co-locating the vLLM engine so as to share GPU memory with the training process or generating the completions without vLLM at all.
+- My implementation only supports generation with [vLLM](https://docs.vllm.ai/en/stable/) as a separate process running in a server, unlike TRL which supports either co-locating the vLLM engine so as to share GPU memory with the training process or generating the completions without vLLM at all, in addition to running a separate server too.
 - I skipped reward-weighing. This wouldn't be hard to include and I might add it in the future, but, fwiw, in TRL no reward-weighing is also a default. It's also not part of the original algorithms.
 - One thing that **is** part of the original algorithms but I didn't include is the $$ \mu $$ parameter (`num_iterations` in TRL). In TRL, this is also set to 1 by default, so my implementation should match TRL, but I think I would like to include this eventually.
 
