--- a/_posts/2025-05-28-may-25-stuff.md
+++ b/_posts/2025-05-28-may-25-stuff.md
@@ -14,7 +14,7 @@ May has been a great.
 - A compilation of [Álvaro Mutis](https://es.wikipedia.org/wiki/%C3%81lvaro_Mutis)' poems which I couldn't have read in a more adequate location. Favorite poem [here](https://www.revistadelauniversidad.mx/articles/6cc909c2-66a7-40ba-8aa5-681dd3438cd1/nocturno):
 
 <div style="text-align: center;">
-  <img src="../images/may25digest1.png" alt="" width="400">
+  <img src="/images/may25digest1.png" alt="" width="400">
 </div>
 
 - [Alessandro Baricco](https://en.wikipedia.org/wiki/Alessandro_Baricco)'s [Oceano Mare](https://en.wikipedia.org/wiki/Ocean_Sea_(novel)), a metaphysical *romanzo* written in poetic prose. The narrative itself flows like a changing tide. I particularly enjoyed the counterpoint between its characters; especially the ironic duplo of Bartleboom and Plasson, who have contrasting approaches of the irreducible and mysterious *oceano mare*.
@@ -26,7 +26,7 @@ May has been a great.
 
 
 <div style="text-align: center;">
-  <img src="../images/may25digest2.png" width="400">
+  <img src="/images/may25digest2.png" width="400">
   <p><em>Wojtek, the Bottiglione Bomborsone</em></p>
 </div>
 
