--- a/_posts/2025-05-28-may-25-stuff.md
+++ b/_posts/2025-05-28-may-25-stuff.md
@@ -20,7 +20,7 @@ May has been a great.
 - [Alessandro Baricco](https://en.wikipedia.org/wiki/Alessandro_Baricco)'s [Oceano Mare](https://en.wikipedia.org/wiki/Ocean_Sea_(novel)), a metaphysical *romanzo* written in poetic prose. The narrative itself flows like a changing tide. I particularly enjoyed the counterpoint between its characters; especially the ironic duplo of Bartleboom and Plasson, who have contrasting approaches of the irreducible and mysterious *oceano mare*.
 - An [anthropology.net post](https://www.anthropology.net/p/when-the-sky-burned-how-a-weakened) on the [Laschamps excursion](https://en.wikipedia.org/wiki/Laschamp_event), when the "Earth’s magnetic field [...] flickered and faltered".
 - Wikipedia's entry on the [Zanclean flood](https://en.wikipedia.org/wiki/Zanclean_flood), a flood that reconnected the Atlantic Ocean and the Mediterranean Sea after the [Messinian salinity crisis](https://en.wikipedia.org/wiki/Messinian_salinity_crisis) in a matter of months! It is estimated "that water rushed down a drop of more than 1,000 metres (3,300 ft) with a maximum discharge of about 100 million cubic metres per second (3.5 billion cubic feet per second), about 1,000 times that of the present-day Amazon River." Imagine that!
-- About [ingressive speech](https://en.wikipedia.org/wiki/Ingressive_sound), which I first heard about in an Instagram reel that my wife showed me. It was particularly interesting to us because local people in villages around the area where we live in Mexico also have a sort of [inhaled 'yeah'](https://en.wikipedia.org/wiki/Ingressive_sound#Inhaled_affirmative_'yeah'). I wonder if this was passed-down through Spanish or through [Náhuatl](https://en.wikipedia.org/wiki/Nahuatl)!
+- About [ingressive speech](https://en.wikipedia.org/wiki/Ingressive_sound). I first learned about it through an Instagram reel that my wife showed me. It particularly caught our attention because locals in villages near where we live in Mexico also use a kind of [inhaled "yeah"](https://en.wikipedia.org/wiki/Ingressive_sound#Inhaled_affirmative_'yeah'). I wonder if this linguistic trait was passed down through Spanish or through [Náhuatl](https://en.wikipedia.org/wiki/Nahuatl)!
 - Learnt about [slothful induction](https://en.wikipedia.org/wiki/Slothful_induction). I have started to point it out :)
 - And these two, which are fun: [Wojtek, the bear](https://en.wikipedia.org/wiki/Wojtek_(bear)) and [Italian brainrot](https://en.wikipedia.org/wiki/Italian_brainrot), so in honor of Wojtek: 
 
