--- a/_posts/2025-05-28-may-25-stuff.md
+++ b/_posts/2025-05-28-may-25-stuff.md
@@ -7,6 +7,11 @@ categories: []
 usemathjax: true
 ---
 
+```
+∴ ◊ ∵ may ∵ ◊ ∴
+       ۞ 2025 ۞
+```
+
 In the spirit of [kipply's](https://kipp.ly/) things read/digest posts and [Tyler Cowen's](https://marginalrevolution.com/) assorted links, I will start posting interesting things I read or discovered. I'll start on a monthly basis.
 
 May has been a great.
