--- a/_posts/2025-05-28-may-25-digest.md
+++ b/_posts/2025-05-28-may-25-digest.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "MAY 25 DIGEST"
+title: "MAY 25"
 author: np
 tags: [DIGEST]
-categories: []
+categories: [digest]
 usemathjax: true
 ---
 
