--- a/_posts/2025-06-29-jun-25-digest.md
+++ b/_posts/2025-06-29-jun-25-digest.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "JUN 25 DIGEST"
+title: "JUN 25"
 author: np
 tags: [DIGEST]
-categories: []
+categories: [digest]
 usemathjax: true
 ---
 
